# mrg

./: .gitignore  README.md  justfile  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml  testing.yml
docs/ko/: README.md
src/mrg/: __init__.py  __main__.py  _ansi_colors.py  _cleaner.py
tests/: test_cleaner.py
