[project]
name = "mrg"
version = "0.1.0.post3"
description = "MRG - Clean miscellaneous files produced by macOS"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "ilotoki0804", email = "ilotoki0804@gmail.com" }
]
keywords = [
    "mrg",
    "macOS",
    "clean",
    "cleaner",
    "tool",
    "cli",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mrg = "mrg.__main__:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
