[project]
name = "mrg"
version = "0.2.1"
description = "mrg - Clean miscellaneous files created by macOS"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "ilotoki0804", email = "ilotoki0804@gmail.com" }
]
keywords = [
    "mrg",
    "macOS",
    "clean",
    "cleaner",
    "normalize",
    "unicode",
    "NFC",
    "AppleDouble",
    "dot underscore",
    "dot underscored",
    "ds_store",
    "tool",
    "cli",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
mrg = "mrg.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
